--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -59,38 +59,38 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Sunlight Needs</h6>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_low" value="Low"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_low" value="Low"/>
                 <label for="sunlight_low">Low</label>
               </p>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_med" value="Medium"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_med" value="Medium"/>
                 <label for="sunlight_med">Medium</label>
               </p>
                 <p>
-                <input name="sunlight" type="radio" id="sunlight_high" value="High"/>
+                <input name="plant[sunlight]" type="radio" id="sunlight_high" value="High"/>
                 <label for="sunlight_high">High</label>
               </p>
               </div>
               <div class="col s3">
                 <h6 style="color:#00acc1;">Soil Type</h6>
                 <p>
-                  <input name="soil" type="radio" id="soil-clay" value="Clay"/>
+                  <input name="plant[soil]" type="radio" id="soil-clay" value="Clay"/>
                   <label for="soil-clay">Clay</label>
                 </p>
                 <p>
-                  <input name="soil" type="radio" id="soil-silt" value="Silt"/>
+                  <input name="plant[soil]" type="radio" id="soil-silt" value="Silt"/>
                   <label for="soil-silt">Silt</label>
                 </p>
                 <p>
-                  <input name="soil" type="radio" id="soil-peaty" value="Peaty"/>
+                  <input name="plant[soil]" type="radio" id="soil-peaty" value="Peaty"/>
                   <label for="soil-peaty">Peaty</label>
                 </p>
                 <p>
-                  <input name="soil" type="radio" id="soil-loam" value="Loam"/>
+                  <input name="plant[soil]" type="radio" id="soil-loam" value="Loam"/>
                   <label for="soil-loam">Loam</label>
                 </p>
                 <p>
-                  <input name="soil" type="radio" id="soil-chalky" value="Chalky"/>
+                  <input name="plant[soil]" type="radio" id="soil-chalky" value="Chalky"/>
                   <label for="soil-chalky">Chalky</label>
                 </p>
                 <!--<select>
@@ -110,19 +110,19 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Container Size</h6>
                 <p>
-                  <input name="container" type="radio" id="container-xs" value="Extra Small"/>
+                  <input name="plant[container]" type="radio" id="container-xs" value="Extra Small"/>
                   <label for="container-xs">Extra Small</label>
                 </p>
                 <p>
-                  <input name="container" type="radio" id="container-sm" value="Small"/>
+                  <input name="plant[container]" type="radio" id="container-sm" value="Small"/>
                   <label for="container-sm">Small</label>
                 </p>
                 <p>
-                  <input name="container" type="radio" id="container-med" value="Medium"/>
+                  <input name="plant[container]" type="radio" id="container-med" value="Medium"/>
                   <label for="container-med">Medium</label>
                 </p>
                 <p>
-                  <input name="container" type="radio" id="container-lg" value="Large"/>
+                  <input name="plant[container]" type="radio" id="container-lg" value="Large"/>
                   <label for="container-lg">Large</label>
                 </p>
               </div>
@@ -130,19 +130,19 @@
               <div class="col s3">
                 <h6 style="color:#00acc1;">Soil Drainage Needs</h6>
                 <p>
-                  <input name="drainage" type="radio" id="drainage-low" value="Low" />
+                  <input name="plant[drainage]" type="radio" id="drainage-low" value="Low" />
                   <label for="drainage-low">Low</label>
                 </p>
                 <p>
-                  <input name="drainage" type="radio" id="drainage-med" value="Medium"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-med" value="Medium"/>
                   <label for="drainage-med">Medium</label>
                 </p>
                 <p>
-                  <input name="drainage" type="radio" id="drainage-high" value="High"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-high" value="High"/>
                   <label for="drainage-high">High</label>
                 </p>
                 <p>
-                  <input name="drainage" type="radio" id="drainage-very-high" value="Very High"/>
+                  <input name="plant[drainage]" type="radio" id="drainage-very-high" value="Very High"/>
                   <label for="drainage-very-high">Very High</label>
                 </p>
               </div>
