--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -1,44 +1,74 @@
+<style>
+.fixed-action-btn {
+  float: right !important;
+  position: absolute !important;
+  right: 5px !important;
+  top: 5px !important;
+  }
+</style>
+
 <h5><%=@user.username%></h5>
 
 <div class="row">
-  <div class="input-field col s3">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light green lighten-1">
-        <h5 class="center-align"><i class="large material-icons" style="color:#e8f5e9;">add_to_photos</i></h5>
-      </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-        <p><a href="#">Edit Plant</a></p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-      </div>
-    </div>
-</div>
-</div>
-
-<%@plants.each do |plant|%>
-  <section>
-    <div class="row">
-      <div class="input-field col s12">
-        <h3><%=plant.name%></h3>
-
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="<%=plant.picture%>">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">Edit Plant</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
+  <div class="input-field col s8 offset-s2">
+    <!--<div class="input-field col s6">
+      <div class="card large">
+        <div class="card-image waves-effect waves-block waves-light green lighten-1">
+          <h5 class="center-align"><i class="large material-icons" style="color:#e8f5e9;">add_to_photos</i></h5>
         </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+          <p><a href="#">Edit Plant</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>-->
 
       </div>
+      <!--<div class="input-field col s6">-->
+      <%@plants.each do |plant|%>
+              <div class="card large">
+                <div class="fixed-action-btn toolbar">
+                    <a class="btn-floating btn-sm red">
+                      <i class="large material-icons">mode_edit</i>
+                    </a>
+                    <ul>
+                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">fullscreen</i></a></li>
+                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">edit</i></a></li>
+                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">control_point_duplicate</i></a></li>
+                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">delete_forever</i></a></li>
+                    </ul>
+                  </div>
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" src="<%=plant.picture%>">
+
+                  <!--<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">edit</i></a>
+-->
+                </div>
+
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"><h5 style="color:#00acc1;"><%=plant.name%></h5><i class="material-icons right">more_vert</i></span>
+                  <p><a href="#">Edit Plant</a></p>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+              </div>
+      <%end%>
     </div>
-  </section>
-<%end%>
+  <!--</div>-->
+</div>
+
+<script>
+$(document).ready(function(){
+     $('.carousel').carousel({
+           dist:0,
+           shift:0,
+           padding:20,
+
+     });
+   });
+   </script>
