--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -2,7 +2,11 @@
    <div class="nav-wrapper green darken-1">
      <a href="/" class="brand-logo">PlantTrack</a>
      <ul class="right hide-on-med-and-down">
-       <li><a href="/logout" class="waves-effect waves-light btn blue-grey lighten-3">Logout</a></li>
+       <li><a href="/plants">Browse</a></li>
+       <li><a href="/my-plants">My Plants</a></li>
+       <li class="active"><a href="/plants/new">Create Plant</a></li>
+        <li><a href="/users/<%=session[:user_id]%>/edit">Edit Profile</a></li>
+       <li><a href="/logout" class="waves-effect waves-light btn blue-grey lighten-4">Logout</a></li>
      </ul>
    </div>
  </nav>
