--- a/app/views/plants/edit_plant.erb
+++ b/app/views/plants/edit_plant.erb
@@ -5,7 +5,6 @@
        <li><a href="/plants">Browse</a></li>
        <li><a href="/my-plants">My Plants</a></li>
        <li><a href="/plants/new">Create Plant</a></li>
-        <li><a href="/profile/edit">Edit Profile</a></li>
        <li><a href="/logout" class="waves-effect waves-light btn blue-grey lighten-4">Logout</a></li>
      </ul>
    </div>
@@ -16,9 +15,10 @@
    <div class="col s8 offset-s2">
       <!--<div class="card">
        <div class="card-content">-->
-        <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Add a New Plant</h4>
+        <h4 class="header center-align" style="color:#00acc1; margin-top:50px;">Edit Your Plant</h4>
+        <h5 class="header center-align" style="color:#00acc1; margin-top:50px;">--<%=@plant.name%>--</h5>
       <div class="row">
-          <form id="newplant" action="/plants/:id" class="col s12" method="POST">
+          <form id="newplant" action="/plants/<%@plant.id%>" class="col s12" method="POST">
             <input id="hidden" type="hidden" name="_method" value="patch">
           <div class="input-field" id="plant_statuses_event">
           <select name="plant[statuses][event]">
@@ -178,39 +178,24 @@
   </div>-->
 </section>
 
-<form action="/plants/<%=@plant.id%>/delete" method="post">
-  <input id="hidden" type="hidden" name="_method" value="delete">
-  <button type="submit" value="Delete Tweet" name="Delete Tweet">Delete Tweet</button>
-</form>
-
       <div class="row" style="height:200px;">
         <div class="input-field col offset-s5" style="margin-top:5S0px;">
           <button class="btn-large waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Submit
               <i class="material-icons right">add</i>
           </button>
-
-          <!--<input type="submit" value="submit" class="waves-effect waves-light btn-large deep-orange lighten-1" name="submit"></input>-->
         </div>
       </div>
     </form>
 
-
-<!--
-<ul class="pagination">
-    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-    <li class="active"><a href="/plants/new">1</a></li>
-    <li class="waves-effect"><a href="#instructions">2</a></li>
-    <li class="waves-effect"><a href="/statuses">3</a></li>
-    <li class="waves-effect"><a href="/plants">4</a></li>
-    <li class="waves-effect"><a href="/instructions" class="waves-effect waves-light btn blue-grey lighten-3">Next</a></li>
-  </ul>-->
+    <form action="/plants/<%=@plant.id%>/delete" method="post">
+      <input id="hidden" type="hidden" name="_method" value="delete">
+      <button type="submit" value="Delete Tweet" name="Delete Plant">Delete Plant</button>
+    </form>
 
 <script>
 $(document).ready(function() {
   $('select').material_select();
   $('.tooltipped').tooltip({delay: 50});
-  $('.parallax').parallax();
-  $('.carousel').carousel();
   $('.datepicker').pickadate({
     selectMonths: true, // Creates a dropdown to control month
     selectYears: 15, // Creates a dropdown of 15 years to control year,
@@ -219,11 +204,5 @@ $(document).ready(function() {
     close: 'Ok',
     closeOnSelect: false // Close upon selecting a date,
   });
-
-
 });
-
-function getComboA(selectObject) {
-    var value = selectObject.value;
-}
 </script>
