minior style edits

--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -67,9 +67,9 @@
       <!--<div class="card">
        <div class="card-content">-->
         <h2 class="header center-align" style="color:#ffffff; margin-top:1.25em;">Welcome, <%=@user.username%></h2>
-        <hr style="border-color:#ffffff; width:40%;">
-        <h5 class="header center-align" style="color:#ffffff;">Browse all community plants and duplicate one <br><b> OR </b><br> Create a new plant</h5>
-        <hr style="border-color:#ffffff; width:40%;">
+        <hr style="border-color:#ffffff; width:40%;"><br>
+        <h5 class="header center-align" style="color:#ffffff;">Browse all community plants and click <i class="material-icons">edit</i> then <i class="material-icons">content_copy</i> to duplicate and add it to your greenhouse.</h5>
+        <br>
         <br>
           <p class="center-align">
             <a href="/plants/new"><button class="btn-large waves-effect waves-light deep-orange lighten-1">Create Plant
