trying to add font awesome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,9 @@
 
 @charset "UTF-8";
 
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 // Color
 @import "materialize/components/color-variables";
 @import "materialize/components/color-classes";
