--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -5,7 +5,7 @@
        <li><a href="/plants">Browse</a></li>
        <li><a href="/my-plants">My Plants</a></li>
        <li class="active"><a href="/plants/new">Create Plant</a></li>
-       <li><a href="/logout" class="waves-effect waves-light btn blue-grey lighten-4">Logout</a></li>
+       <li><a href="/logout" class="waves-effect waves-light btn green darken-1">Logout</a></li>
      </ul>
    </div>
  </nav>
