--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -38,7 +38,7 @@
        <li class="active"><a href="/plants">Browse</a></li>
        <li><a href="/my-plants">My Plants</a></li>
        <li><a href="/plants/new">Create Plant</a></li>
-       <li><a href="/logout" class="waves-effect waves-light btn blue-grey lighten-4">Logout</a></li>
+       <li><a href="/logout" class="waves-effect waves-light btn green darken-1">Logout</a></li>
      </ul>
    </div>
  </nav>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                  <p><i class="fa fa-tint fa-2x"></i>Water</p>
                 </div>
               </div>
             <!--</div>-->
