added a few tooltips

--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -121,10 +121,10 @@
                       <i class="large material-icons">mode_edit</i>
                     </a>
                     <ul>
-                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">fullscreen</i></a></li>
-                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">edit</i></a></li>
-                      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">content_copy</i></a></li>
-                      <li class="waves-effect waves-light"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
+                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="View Page"><a href="#!"><i class="material-icons">fullscreen</i></a></li>
+                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="#!"><i class="material-icons">edit</i></a></li>
+                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!"><i class="material-icons">content_copy</i></a></li>
+                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
                     </ul>
                   </div>
                 <div class="card-image waves-effect waves-block waves-light">
