--- a/app/views/plants/plants.erb
+++ b/app/views/plants/plants.erb
@@ -61,7 +61,8 @@
 
 
 <div class="parallax-container" style="height:450px;">
-  <div class="parallax" style="background-color:#00acc1;"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb" style="opacity: 0.1;"></div>
+  <!--background-color:#00acc1;-->
+  <div class="parallax" style="background-color:#000000;"><img src="https://images.pexels.com/photos/631909/pexels-photo-631909.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb" style="opacity: 0.7; filter:blur(5px);"></div>
 
   <!--<div class="row" style="height:200px;">
    <div class="col s2 offset-s5" style="background-color:#f5f5f5;">
@@ -70,7 +71,7 @@
        <div class="card-content">-->
         <h2 class="header center-align" style="color:#ffffff; margin-top:1.25em;">Welcome, <%=@user.username%></h2>
         <hr style="border-color:#ffffff; width:40%;"><br>
-        <h5 class="header center-align" style="color:#ffffff;">Browse all community plants and click <i class="material-icons">edit</i> then <i class="material-icons">content_copy</i> to duplicate and add it to your greenhouse.</h5>
+        <h5 class="header center-align" style="color:#ffffff;">Browse all community plants and click <i class="material-icons">content_copy</i> to add it to your greenhouse.</h5>
         <br>
         <br>
           <p class="center-align">
@@ -116,17 +117,26 @@
           <div class="col s12 m6">
             <!--<div class="carousel-item">-->
               <div class="card large sticky-action">
-                <div class="fixed-action-btn toolbar">
-                    <a class="btn-floating btn-sm deep-orange lighten-1">
-                      <i class="large material-icons">mode_edit</i>
-                    </a>
-                    <ul>
-                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="View Page"><a href="/plants/<%=plant.id%>"><i class="material-icons">fullscreen</i></a></li>
-                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="#!"><i class="material-icons">edit</i></a></li>
-                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!"><i class="material-icons">content_copy</i></a></li>
-                      <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
-                    </ul>
-                  </div>
+                <%if session[:user_id] == plant.user_id%>
+                  <div class="fixed-action-btn toolbar">
+                      <a class="btn-floating btn-sm deep-orange lighten-1">
+                        <i class="large material-icons">mode_edit</i>
+                      </a>
+                      <ul>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="View Page"><a href="/plants/<%=plant.id%>"><i class="material-icons">fullscreen</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Edit"><a href="#!"><i class="material-icons">edit</i></a></li>
+                        <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Copy"><a href="#!"><i class="material-icons">content_copy</i></a></li>
+                          <li class="waves-effect waves-light tooltipped" data-position="bottom" data-delay="50" data-tooltip="Delete"><a href="#" onclick="document.getElementById('deleteplant').submit();"><i class="material-icons">delete_forever</i></a></li>
+                      </ul>
+                    </div>
+
+                  <%else%>
+                    <div class="fixed-action-btn" style="padding-top:0px !important;">
+                        <a class="btn-floating btn-sm deep-orange lighten-1">
+                          <i class="large material-icons">content_copy</i>
+                        </a>
+                    </div>
+                  <%end%>
                 <div class="card-image waves-effect waves-block waves-light">
                   <img class="activator" src="<%=plant.picture%>">
 
