--- a/app/views/plants/show_plant.erb
+++ b/app/views/plants/show_plant.erb
@@ -63,78 +63,74 @@
 <div class="row">
     <div class="col s12 m4 offset-m4">
       <img class="circle responsive-img" src="<%=@plant.picture%>" style="margin-top:50px;"><h4 class="header center-align" style="color:#00acc1; margin-top:25px;"><%=@plant.name%></h4>
+        <%if session[:user_id] == @plant.user_id%>
+        <div class="center-align">
+          <button class="btn-large waves-effect waves-light deep-orange lighten-1 modal-trigger" data-target="statusmodal">Status Update
+              <i class="material-icons right">add</i>
+          </button>
+        </div>
+        <%end%>
     </div>
   </div>
 </section>
 
-<%if session[:user_id] == @plant.user_id%>
-    <section style="margin-top:80px;">
-      <div class="row">
-       <div class="col s8 offset-s2">
-        <form id="newplant" action="/<%=@plant.id%>/statuses" class="col s12" method="POST">
-          <div class="card">
-           <div class="card-content">
-             <h5 class="header center-align" style="color:#00acc1;">Keep Your Plant Up-to-date</h5>
-             <h4 class="header center-align" style="color:#00acc1;">Add a Plant Status Event</h4>
+<div id="statusmodal" class="modal modal-fixed-footer">
+ <form id="newplant" action="/<%=@plant.id%>/statuses" method="POST">
+ <div class="modal-content">
+         <h4 class="header center-align" style="color:#00acc1;">How's your <u><%=@plant.name%></u> doing?</h4>
 
 
-             <div class="input-field" id="plant_statuses_event" >
-             <select name="plant[statuses][event]" form="newplant">
-               <option value="" disabled selected>Select an event</option>
-               <option class="water_status" value="Watered" id="watered">Watered</option>
-               <option class="water_status" value="Pruned" id="pruned">Pruned</option>
-               <option class="water_status" value="Move to More Sun" id="moresun">Moved to More Sun</option>
-               <option class="water_status" value="Moved to Less Sun" id="lesssun">Moved to Less Sun</option>
-               <option class="water_status" value="Repotted" id="repotted">Repotted</option>
-               </select>
-                <label for="plant_statuses_event">Event</label>
-             </div>
-
-           <label for="status-date">Select the Event date</label>
-           <input type="text" class="datepicker" id="status-date" name="plant[statuses][event_date]" form="newplant">
-
-               <div class="input-field">
-               <select name="plant[statuses][leaf_status]" form="newplant">
-                 <option value="" disabled selected>How's your plant looking?</option>
-                 <option value="New Growth">New Growth</option>
-                 <option value="Healthy">Healthy</option>
-                 <option value="Curling">Curling</option>
-                 <option value="Drooping">Drooping</option>
-                 <option value="Yellowing">Yellowing</option>
-                 <option value="Light Spots">Light Spots</option>
-                 <option value="Dark Spots">Dark Spots</option>
-                 <option value="Dead Leaves">Dead Leaves</option>
-                 </select>
-                  <label>Leaf Status</label>
-               </div>
-
-               <div class="input-field">
-               <select name="plant[statuses][soil_status]" form="newplant">
-                 <option value="" disabled selected>How's the soil feel?</option>
-                 <option value="Extremely Dry">Extremely Dry</option>
-                 <option value="Dry">Dry</option>
-                 <option value="Damp">Damp</option>
-                 <option value="Soaked">Soaked</option>
-                 <option value="Showing Mildew">Showing Mildew</option>
-                 </select>
-                  <label>Soil Status</label>
-               </div>
-
-                   <button class="btn-large waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Submit
-                       <i class="material-icons right">add</i>
-                   </button>
-
-                   <!--<input type="submit" value="submit" class="waves-effect waves-light btn-large deep-orange lighten-1" name="submit"></input>-->
-           </div>
+         <div class="input-field" id="plant_statuses_event" >
+         <select name="plant[statuses][event]" form="newplant">
+           <option value="" disabled selected>Select an event</option>
+           <option class="water_status" value="Watered" id="watered">Watered</option>
+           <option class="water_status" value="Pruned" id="pruned">Pruned</option>
+           <option class="water_status" value="Move to More Sun" id="moresun">Moved to More Sun</option>
+           <option class="water_status" value="Moved to Less Sun" id="lesssun">Moved to Less Sun</option>
+           <option class="water_status" value="Repotted" id="repotted">Repotted</option>
+           </select>
+            <label for="plant_statuses_event">Event</label>
          </div>
-       </div>
-     </div>
 
-     </form>
-    </section>
+       <label for="status-date">Select the Event date</label>
+       <input type="text" class="datepicker" id="status-date" name="plant[statuses][event_date]" form="newplant">
 
-<%end%>
+           <div class="input-field">
+           <select name="plant[statuses][leaf_status]" form="newplant">
+             <option value="" disabled selected>How's your plant looking?</option>
+             <option value="New Growth">New Growth</option>
+             <option value="Healthy">Healthy</option>
+             <option value="Curling">Curling</option>
+             <option value="Drooping">Drooping</option>
+             <option value="Yellowing">Yellowing</option>
+             <option value="Light Spots">Light Spots</option>
+             <option value="Dark Spots">Dark Spots</option>
+             <option value="Dead Leaves">Dead Leaves</option>
+             </select>
+              <label>Leaf Status</label>
+           </div>
 
+           <div class="input-field">
+           <select name="plant[statuses][soil_status]" form="newplant">
+             <option value="" disabled selected>How's the soil feel?</option>
+             <option value="Extremely Dry">Extremely Dry</option>
+             <option value="Dry">Dry</option>
+             <option value="Damp">Damp</option>
+             <option value="Soaked">Soaked</option>
+             <option value="Showing Mildew">Showing Mildew</option>
+             </select>
+              <label>Soil Status</label>
+           </div>
+   </div>
+
+     <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Cancel</a>
+      <button class="btn waves-effect waves-light deep-orange lighten-1" type="submit" name="action">Update
+          <i class="material-icons right">add</i>
+      </button>
+   </div>
+ </form>
+ </div>
 
 <section class="container">
 <div class="row">
